MT4/src/main/java/gen/GrammParser.java
// Generated from /Users/aishayakupova/Documents/MT4/src/main/antlr/Gramm.g4 by ANTLR 4.9.2
package gen;
import gramm.*; 
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, TERM=11, NONTERM=12, STRING=13, CODE=14, WS=15;
	public static final int
		RULE_start = 0, RULE_choose_rule = 1, RULE_non_term_rule = 2, RULE_args = 3, 
		RULE_non_term_returns = 4, RULE_arg = 5, RULE_var_or_type = 6, RULE_rightPart = 7, 
		RULE_ruleToken = 8, RULE_param = 9;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "choose_rule", "non_term_rule", "args", "non_term_returns", 
			"arg", "var_or_type", "rightPart", "ruleToken", "param"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'='", "':'", "'|'", "'('", "','", "')'", "'returns'", "'['", 
			"']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, "TERM", 
			"NONTERM", "STRING", "CODE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Gramm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Grammar v;
		public Token NONTERM;
		public TerminalNode NONTERM() { return getToken(GrammParser.NONTERM, 0); }
		public List<Choose_ruleContext> choose_rule() {
			return getRuleContexts(Choose_ruleContext.class);
		}
		public Choose_ruleContext choose_rule(int i) {
			return getRuleContext(Choose_ruleContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			((StartContext)_localctx).NONTERM = match(NONTERM);
			 ((StartContext)_localctx).v =  new Grammar((((StartContext)_localctx).NONTERM!=null?((StartContext)_localctx).NONTERM.getText():null)); 
			setState(25); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(22);
				choose_rule(_localctx.v);
				setState(23);
				match(T__0);
				}
				}
				setState(27); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==TERM || _la==NONTERM );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Choose_ruleContext extends ParserRuleContext {
		public Grammar gr;
		public Token TERM;
		public Token STRING;
		public Non_term_ruleContext non_term_rule;
		public TerminalNode TERM() { return getToken(GrammParser.TERM, 0); }
		public TerminalNode STRING() { return getToken(GrammParser.STRING, 0); }
		public Non_term_ruleContext non_term_rule() {
			return getRuleContext(Non_term_ruleContext.class,0);
		}
		public Choose_ruleContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Choose_ruleContext(ParserRuleContext parent, int invokingState, Grammar gr) {
			super(parent, invokingState);
			this.gr = gr;
		}
		@Override public int getRuleIndex() { return RULE_choose_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterChoose_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitChoose_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitChoose_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Choose_ruleContext choose_rule(Grammar gr) throws RecognitionException {
		Choose_ruleContext _localctx = new Choose_ruleContext(_ctx, getState(), gr);
		enterRule(_localctx, 2, RULE_choose_rule);
		try {
			setState(40);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(29);
				((Choose_ruleContext)_localctx).TERM = match(TERM);
				setState(30);
				match(T__1);
				setState(31);
				((Choose_ruleContext)_localctx).STRING = match(STRING);
				 _localctx.gr.addTermRule(new TermRule(false, (((Choose_ruleContext)_localctx).TERM!=null?((Choose_ruleContext)_localctx).TERM.getText():null), (((Choose_ruleContext)_localctx).STRING!=null?((Choose_ruleContext)_localctx).STRING.getText():null))); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(33);
				((Choose_ruleContext)_localctx).TERM = match(TERM);
				setState(34);
				match(T__2);
				setState(35);
				((Choose_ruleContext)_localctx).STRING = match(STRING);
				 _localctx.gr.addTermRule(new TermRule(true, (((Choose_ruleContext)_localctx).TERM!=null?((Choose_ruleContext)_localctx).TERM.getText():null), (((Choose_ruleContext)_localctx).STRING!=null?((Choose_ruleContext)_localctx).STRING.getText():null))); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(37);
				((Choose_ruleContext)_localctx).non_term_rule = non_term_rule();
				 _localctx.gr.addNonTermRule(((Choose_ruleContext)_localctx).non_term_rule.v); 
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Non_term_ruleContext extends ParserRuleContext {
		public NonTermRule v;
		public Token NONTERM;
		public ArgsContext args;
		public Non_term_returnsContext non_term_returns;
		public RightPartContext rightPart;
		public TerminalNode NONTERM() { return getToken(GrammParser.NONTERM, 0); }
		public ArgsContext args() {
			return getRuleContext(ArgsContext.class,0);
		}
		public Non_term_returnsContext non_term_returns() {
			return getRuleContext(Non_term_returnsContext.class,0);
		}
		public List<RightPartContext> rightPart() {
			return getRuleContexts(RightPartContext.class);
		}
		public RightPartContext rightPart(int i) {
			return getRuleContext(RightPartContext.class,i);
		}
		public Non_term_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_non_term_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterNon_term_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitNon_term_rule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitNon_term_rule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Non_term_ruleContext non_term_rule() throws RecognitionException {
		Non_term_ruleContext _localctx = new Non_term_ruleContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_non_term_rule);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			((Non_term_ruleContext)_localctx).NONTERM = match(NONTERM);
			setState(43);
			((Non_term_ruleContext)_localctx).args = args();
			setState(44);
			((Non_term_ruleContext)_localctx).non_term_returns = non_term_returns();
			setState(45);
			match(T__1);
			 ((Non_term_ruleContext)_localctx).v =  new NonTermRule((((Non_term_ruleContext)_localctx).NONTERM!=null?((Non_term_ruleContext)_localctx).NONTERM.getText():null), ((Non_term_ruleContext)_localctx).args.v, ((Non_term_ruleContext)_localctx).non_term_returns.v); 
			setState(47);
			((Non_term_ruleContext)_localctx).rightPart = rightPart();
			 _localctx.v.addRule(((Non_term_ruleContext)_localctx).rightPart.v); 
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(49);
				match(T__3);
				setState(50);
				((Non_term_ruleContext)_localctx).rightPart = rightPart();
				 _localctx.v.addRule(((Non_term_ruleContext)_localctx).rightPart.v); 
				}
				}
				setState(57);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgsContext extends ParserRuleContext {
		public List<Argument> v;
		public ArgContext arg;
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public ArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_args; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgsContext args() throws RecognitionException {
		ArgsContext _localctx = new ArgsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_args);
		int _la;
		try {
			setState(74);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__4:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(T__4);
				 ((ArgsContext)_localctx).v =  new ArrayList<>(); 
				setState(60);
				((ArgsContext)_localctx).arg = arg();
				 _localctx.v.add(((ArgsContext)_localctx).arg.v); 
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(62);
					match(T__5);
					setState(63);
					((ArgsContext)_localctx).arg = arg();
					 _localctx.v.add(((ArgsContext)_localctx).arg.v); 
					}
					}
					setState(70);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(71);
				match(T__6);
				}
				break;
			case T__1:
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				 ((ArgsContext)_localctx).v =  new ArrayList<>(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Non_term_returnsContext extends ParserRuleContext {
		public List<Argument> v;
		public ArgContext arg;
		public List<ArgContext> arg() {
			return getRuleContexts(ArgContext.class);
		}
		public ArgContext arg(int i) {
			return getRuleContext(ArgContext.class,i);
		}
		public Non_term_returnsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_non_term_returns; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterNon_term_returns(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitNon_term_returns(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitNon_term_returns(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Non_term_returnsContext non_term_returns() throws RecognitionException {
		Non_term_returnsContext _localctx = new Non_term_returnsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_non_term_returns);
		int _la;
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(76);
				match(T__7);
				setState(77);
				match(T__8);
				 ((Non_term_returnsContext)_localctx).v =  new ArrayList<>(); 
				setState(79);
				((Non_term_returnsContext)_localctx).arg = arg();
				 _localctx.v.add(((Non_term_returnsContext)_localctx).arg.v); 
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__5) {
					{
					{
					setState(81);
					match(T__5);
					setState(82);
					((Non_term_returnsContext)_localctx).arg = arg();
					 _localctx.v.add(((Non_term_returnsContext)_localctx).arg.v); 
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(90);
				match(T__9);
				}
				break;
			case T__1:
				enterOuterAlt(_localctx, 2);
				{
				 ((Non_term_returnsContext)_localctx).v =  new ArrayList<>(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgContext extends ParserRuleContext {
		public Argument v;
		public Var_or_typeContext l;
		public Var_or_typeContext r;
		public List<Var_or_typeContext> var_or_type() {
			return getRuleContexts(Var_or_typeContext.class);
		}
		public Var_or_typeContext var_or_type(int i) {
			return getRuleContext(Var_or_typeContext.class,i);
		}
		public ArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arg; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterArg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitArg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitArg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgContext arg() throws RecognitionException {
		ArgContext _localctx = new ArgContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arg);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			((ArgContext)_localctx).l = var_or_type();
			setState(96);
			match(T__2);
			setState(97);
			((ArgContext)_localctx).r = var_or_type();
			 ((ArgContext)_localctx).v =  new Argument(((ArgContext)_localctx).l.v, ((ArgContext)_localctx).r.v); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_or_typeContext extends ParserRuleContext {
		public String v;
		public Token TERM;
		public Token NONTERM;
		public TerminalNode TERM() { return getToken(GrammParser.TERM, 0); }
		public TerminalNode NONTERM() { return getToken(GrammParser.NONTERM, 0); }
		public Var_or_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_or_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterVar_or_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitVar_or_type(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitVar_or_type(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_or_typeContext var_or_type() throws RecognitionException {
		Var_or_typeContext _localctx = new Var_or_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_var_or_type);
		try {
			setState(104);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TERM:
				enterOuterAlt(_localctx, 1);
				{
				setState(100);
				((Var_or_typeContext)_localctx).TERM = match(TERM);
				 ((Var_or_typeContext)_localctx).v =  (((Var_or_typeContext)_localctx).TERM!=null?((Var_or_typeContext)_localctx).TERM.getText():null); 
				}
				break;
			case NONTERM:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				((Var_or_typeContext)_localctx).NONTERM = match(NONTERM);
				 ((Var_or_typeContext)_localctx).v =  (((Var_or_typeContext)_localctx).NONTERM!=null?((Var_or_typeContext)_localctx).NONTERM.getText():null); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightPartContext extends ParserRuleContext {
		public List<RuleToken> v;
		public RuleTokenContext ruleToken;
		public List<RuleTokenContext> ruleToken() {
			return getRuleContexts(RuleTokenContext.class);
		}
		public RuleTokenContext ruleToken(int i) {
			return getRuleContext(RuleTokenContext.class,i);
		}
		public RightPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightPart; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterRightPart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitRightPart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitRightPart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RightPartContext rightPart() throws RecognitionException {
		RightPartContext _localctx = new RightPartContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_rightPart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			 ((RightPartContext)_localctx).v =  new ArrayList<>(); 
			setState(110); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(107);
				((RightPartContext)_localctx).ruleToken = ruleToken();
				 _localctx.v.add(((RightPartContext)_localctx).ruleToken.v); 
				}
				}
				setState(112); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TERM) | (1L << NONTERM) | (1L << CODE))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RuleTokenContext extends ParserRuleContext {
		public RuleToken v;
		public Token TERM;
		public Token NONTERM;
		public ParamContext param;
		public Token CODE;
		public TerminalNode TERM() { return getToken(GrammParser.TERM, 0); }
		public TerminalNode NONTERM() { return getToken(GrammParser.NONTERM, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public TerminalNode CODE() { return getToken(GrammParser.CODE, 0); }
		public RuleTokenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleToken; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterRuleToken(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitRuleToken(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitRuleToken(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleTokenContext ruleToken() throws RecognitionException {
		RuleTokenContext _localctx = new RuleTokenContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_ruleToken);
		int _la;
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TERM:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				((RuleTokenContext)_localctx).TERM = match(TERM);
				 ((RuleTokenContext)_localctx).v =  new Term((((RuleTokenContext)_localctx).TERM!=null?((RuleTokenContext)_localctx).TERM.getText():null)); 
				}
				break;
			case NONTERM:
				enterOuterAlt(_localctx, 2);
				{
				setState(116);
				((RuleTokenContext)_localctx).NONTERM = match(NONTERM);
				 NonTerm t = new NonTerm((((RuleTokenContext)_localctx).NONTERM!=null?((RuleTokenContext)_localctx).NONTERM.getText():null)); 
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__4) {
					{
					setState(118);
					match(T__4);
					setState(119);
					((RuleTokenContext)_localctx).param = param();
					 t.addParameter(((RuleTokenContext)_localctx).param.v); 
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==T__5) {
						{
						{
						setState(121);
						match(T__5);
						setState(122);
						((RuleTokenContext)_localctx).param = param();
						 t.addParameter(((RuleTokenContext)_localctx).param.v); 
						}
						}
						setState(129);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(130);
					match(T__6);
					}
				}

				 ((RuleTokenContext)_localctx).v =  t; 
				}
				break;
			case CODE:
				enterOuterAlt(_localctx, 3);
				{
				setState(135);
				((RuleTokenContext)_localctx).CODE = match(CODE);
				 ((RuleTokenContext)_localctx).v =  new Code((((RuleTokenContext)_localctx).CODE!=null?((RuleTokenContext)_localctx).CODE.getText():null)); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public String v;
		public Token CODE;
		public Var_or_typeContext var_or_type;
		public TerminalNode CODE() { return getToken(GrammParser.CODE, 0); }
		public Var_or_typeContext var_or_type() {
			return getRuleContext(Var_or_typeContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammListener ) ((GrammListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GrammVisitor ) return ((GrammVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_param);
		try {
			setState(144);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CODE:
				enterOuterAlt(_localctx, 1);
				{
				setState(139);
				((ParamContext)_localctx).CODE = match(CODE);
				 ((ParamContext)_localctx).v =  (((ParamContext)_localctx).CODE!=null?((ParamContext)_localctx).CODE.getText():null).substring(1, (((ParamContext)_localctx).CODE!=null?((ParamContext)_localctx).CODE.getText():null).length() - 1); 
				}
				break;
			case TERM:
			case NONTERM:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				((ParamContext)_localctx).var_or_type = var_or_type();
				 ((ParamContext)_localctx).v =  ((ParamContext)_localctx).var_or_type.v; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}